add link to whatsapp

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <a href="https://www.instagram.com/alicebnl" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.youtube.com/@annabagunceira" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+        <a href="https://api.whatsapp.com/send?phone=5511940286632" target="_blank">
+          <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
         <a href="https://www.linkedin.com/in/alice-bianchi-nogueira/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
