--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <li>
           <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Coneça o Explorer</a
+            >Conheça o Explorer</a
           >
         </li>
       </ul>
